force-app/main/default/objects/Master_Fund_Code__c/Master_Fund_Code__c.object-meta.xml
<CustomObject>
    <label>Master Fund Code</label>
    <nameField>
        <label>Fund Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Fund Code</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>