force-app/main/default/objects/Master_Fund_Code__c/fields/ALLOW_SWITCH_IN_REDIRECT_IN_Top_Up__c.field-meta.xml
<CustomField>
    <fullName>ALLOW_SWITCH_IN_REDIRECT_IN_Top_Up__c</fullName>
    <label>ALLOW SWITCH IN / REDIRECT IN / Top Up</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>