force-app/main/default/objects/Master_Fund_Code__c/fields/Desc_Capitalize_Each_word__c.field-meta.xml
<CustomField>
    <fullName>Desc_Capitalize_Each_word__c</fullName>
    <label>Desc Capitalize Each word</label>
    <type>TextArea</type>
</CustomField>