force-app/main/default/objects/Master_Fund_Code__c/fields/Desc_Fun_Code__c.field-meta.xml
<CustomField>
    <fullName>Desc_Fun_Code__c</fullName>
    <label>Desc Fun Code</label>
    <type>TextArea</type>
</CustomField>