force-app/main/default/objects/Master_Fund_Code__c/fields/FUND_ALLOWED_At_New_Business_buy__c.field-meta.xml
<CustomField>
    <fullName>FUND_ALLOWED_At_New_Business_buy__c</fullName>
    <label>FUND ALLOWED At New Business (buy)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>