force-app/main/default/objects/Master_Fund_Code__c/fields/MIN_ALLOC__c.field-meta.xml
<CustomField>
    <fullName>MIN_ALLOC__c</fullName>
    <label>MIN ALLOC (%)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>