force-app/main/default/objects/Master_Fund_Code__c/fields/MIN_FUND_BL__c.field-meta.xml
<CustomField>
    <fullName>MIN_FUND_BL__c</fullName>
    <label>MIN FUND BL</label>
    <length>10</length>
    <type>Text</type>
</CustomField>