force-app/main/default/objects/Master_Fund_Code__c/fields/MUST_BE_ZERO_FUND_BAL_FOR_PREM_ALOC__c.field-meta.xml
<CustomField>
    <fullName>MUST_BE_ZERO_FUND_BAL_FOR_PREM_ALOC__c</fullName>
    <label>MUST BE ZERO FUND BAL.FOR PREM ALOC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>