force-app/main/default/objects/Master_Fund_Code__c/fields/Name_Code__c.field-meta.xml
<CustomField>
    <fullName>Name_Code__c</fullName>
    <formula>Name + &apos;-&apos; +  Desc_Fun_Code__c</formula>
    <label>Name Code</label>
    <type>Text</type>
</CustomField>