force-app/main/default/objects/Master_Fund_Code__c/fields/Plan_Code__c.field-meta.xml
<CustomField>
    <fullName>Plan_Code__c</fullName>
    <label>Plan Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HNMEPSA</fullName>
            </value>
            <value>
                <fullName>HNMEPSB</fullName>
            </value>
            <value>
                <fullName>HONA</fullName>
            </value>
            <value>
                <fullName>HONB</fullName>
            </value>
            <value>
                <fullName>HOND01</fullName>
            </value>
            <value>
                <fullName>HOND02</fullName>
            </value>
            <value>
                <fullName>HOND03</fullName>
            </value>
            <value>
                <fullName>HOND04</fullName>
            </value>
            <value>
                <fullName>HOND05</fullName>
            </value>
            <value>
                <fullName>HOND06</fullName>
            </value>
            <value>
                <fullName>HOND07</fullName>
            </value>
            <value>
                <fullName>ULKID25</fullName>
            </value>
            <value>
                <fullName>ULKID24</fullName>
            </value>
            <value>
                <fullName>ULKID23</fullName>
            </value>
            <value>
                <fullName>ULKID22</fullName>
            </value>
            <value>
                <fullName>ULKID21</fullName>
            </value>
            <value>
                <fullName>ULKID20</fullName>
            </value>
            <value>
                <fullName>ULKID19</fullName>
            </value>
            <value>
                <fullName>ULKID18</fullName>
            </value>
            <value>
                <fullName>ULKID17</fullName>
            </value>
            <value>
                <fullName>ULKID16</fullName>
            </value>
            <value>
                <fullName>ULKID15</fullName>
            </value>
            <value>
                <fullName>ULKID14</fullName>
            </value>
            <value>
                <fullName>ULKID13</fullName>
            </value>
            <value>
                <fullName>ULKID12</fullName>
            </value>
            <value>
                <fullName>ULKID11</fullName>
            </value>
            <value>
                <fullName>ULKID10</fullName>
            </value>
            <value>
                <fullName>ULKDS25</fullName>
            </value>
            <value>
                <fullName>ULKDS24</fullName>
            </value>
            <value>
                <fullName>ULKDS23</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>